# Safari

./: CMakeLists.txt  Dockerfile  README.md
CMakeCI/: CMakeLists.txt
assets/shaders/: grid.frag  grid.vert  sprite-shadow.frag  sprite-shadow.vert  sprite.frag  sprite.vert  terrain.frag  terrain.vert  ui-box.frag  ui-box.vert  ui-sprite.frag  ui-sprite.vert
src/framework/: Behaviour.cpp  Behaviour.hpp  Component.cpp  Component.hpp  ComponentManager.cpp  ComponentManager.hpp  Core.cpp  Core.hpp  Entity.cpp  Entity.hpp  Fonts.cpp  Fonts.hpp  Health.cpp  Health.hpp  Input.cpp  Input.hpp  Labels.cpp  Labels.hpp  Mesh.hpp  Ray.cpp  Ray.hpp  Renderable.hpp  Renderer.cpp  Renderer.hpp  Selector.cpp  Selector.hpp  Texture.cpp  Texture.hpp  Transform.cpp  Transform.hpp  UI.cpp  UI.hpp  UserEvent.cpp  UserEvent.hpp  Utils.cpp  Utils.hpp
src/game/: AnimalManager.cpp  AnimalManager.hpp  Animator.cpp  Animator.hpp  Background.cpp  Background.hpp  Camera.cpp  Camera.hpp  Carcass.cpp  Carcass.hpp  Cow.cpp  Cow.hpp  EdiblePlantTypes.hpp  FaceCamera.cpp  FaceCamera.hpp  Factory.cpp  Factory.hpp  FloraManager.cpp  FloraManager.hpp  GameManager.cpp  GameManager.hpp  Grid.cpp  Grid.hpp  GridSelector.cpp  GridSelector.hpp  HerdManager.cpp  HerdManager.hpp  HerdTypes.hpp  Jeep.cpp  Jeep.hpp  Light.cpp  Light.hpp  Main.cpp  Perlin.hpp  Road.cpp  Road.hpp  Seeder.cpp  Seeder.hpp  Sprite.cpp  Sprite.hpp  (+8 more)
src/game/AI/: CarnivoreAI.cpp  CarnivoreAI.hpp  CarnivorePackAI.cpp  CarnivorePackAI.hpp  HerbivoreAI.cpp  HerbivoreAI.hpp  HerbivoreHerdAI.cpp  HerbivoreHerdAI.hpp  HerbivoreSiteMemory.cpp  HerbivoreSiteMemory.hpp  IHerdRelationshipInteraction.hpp  ITargetable.hpp  Sexes.hpp
src/game/Animals/: AnimalSite.hpp  AnimalSiteComparator.hpp  Giraffe.cpp  Giraffe.hpp  GiraffeHerd.cpp  GiraffeHerd.hpp  Lion.cpp  Lion.hpp  LionPride.cpp  LionPride.hpp  RandomMigration.cpp  RandomMigration.hpp  Wildebeest.cpp  Wildebeest.hpp  WildebeestHerd.cpp  WildebeestHerd.hpp  Zebra.cpp  Zebra.hpp  ZebraHerd.cpp  ZebraHerd.hpp
src/game/Decorations/: Decoration.cpp  Decoration.hpp
src/game/DestinationBasedMovement/: DestinationBasedMovement.cpp  DestinationBasedMovement.hpp  IDestinationBasedMovementStrategy.hpp  LinearDestinationBasedMovementStrategy.cpp  LinearDestinationBasedMovementStrategy.hpp
src/game/EdiblePlants/: EdiblePlant.cpp  EdiblePlant.hpp
src/game/InteractableObjects/: Airship.cpp  Airship.hpp  Drone.cpp  Drone.hpp  DroneStation.cpp  DroneStation.hpp  EntitySelector.cpp  EntitySelector.hpp  Hunter.cpp  Hunter.hpp  HunterHut.cpp  HunterHut.hpp  Poacher.cpp  Poacher.hpp  SecurityCamera.cpp  SecurityCamera.hpp
src/game/TestBehaviours/: AoECow.hpp  AoeCow.cpp
tests/: HunterTest.cpp  PoacherTest.cpp  airshipTest.cpp  droneStationTest.cpp  droneTest.cpp  exampleTest.cpp  hunterHutTest.cpp  jeepTest.cpp  roadTest.cpp  securityCameraTest.cpp  test_main.cpp  timeTest.cpp
